--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.assignment.departments" >
+    package="com.assignment.departments">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -11,8 +11,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".DepartmentActivity" >
+        android:theme="@style/AppTheme">
+        <activity android:name=".DepartmentActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,8 +21,9 @@
         </activity>
         <activity android:name=".SubDepartmentActivity" />
         <activity android:name=".EmployeeActivity" />
-        <activity android:name=".ChangeTopManagerActivity" >
-        </activity>
+        <activity android:name=".ChangeTopManagerActivity" />
+        <activity android:name=".AddDepartmentActivity" />
+        <activity android:name=".AddEmployeeActivity"></activity>
     </application>
 
 </manifest>
